# django-tortoise-objects

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
django_tortoise/: __init__.py  _models.py  apps.py  code_generator.py  conf.py  db_config.py  exceptions.py  fields.py  generator.py  initialization.py  introspection.py  manager.py  registry.py
django_tortoise/management/commands/: generate_tortoise_models.py
example_project/: README.md  pyproject.toml
example_project/benchmarks/: __main__.py  bench_hierarchy.py  bench_small.py  bench_wide.py  diagrams.py  runner.py
example_project/demo/: admin.py  models.py  urls.py  views.py
example_project/demo/management/commands/: seed_data.py
example_project/demo/migrations/: 0001_initial.py
example_project/diagrams/: bench_postgres.json  bench_sqlite.json
example_project/example_project/: asgi.py  settings.py  urls.py
tests/: conftest.py  django_settings.py  test_apps.py  test_code_generator.py  test_conf.py  test_db_config.py  test_edge_cases.py  test_exceptions.py  test_fields.py  test_generate_command.py  test_generator.py  test_initialization.py  test_integration.py  test_introspection.py  test_manager.py  test_model_selection.py  test_multi_db.py  test_placeholder.py  test_registry.py  test_relations.py
tests/testapp/: models.py
